[package]
name = "bunqyy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple bunq API client"
repository = "https://github.com/rogierknoester/bunqyy"
readme = "readme.md"

[dependencies]
serde_json = "^1.0"
serde = { version="^1.0", features = ["std", "derive"] }
tokio = { version = "^1.38", features = ["full"] }
reqwest = { version = "^0.12", features = ["json"] }
reqwest-middleware = "^0.3"
http = "^1"
url = "^2.5.1"
openssl = "^0.10.64"
tracing = "^0.1"
log = "^0.4.21"
chrono = { version = "^0.4", features = ["default", "serde"] }
csv = "^1.3.0"
anyhow = "^1.0"
thiserror = "^1.0"
constcat = "^0.5.0"
async-trait = "^0.1.80"


[features]
default = []
payments = ["monetary-accounts"]
monetary-accounts = []
